fix overflow-y

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -351,7 +351,7 @@ tr:hover {
 body,
 html {
   overflow-x: hidden;
-  overflow-y: hidden;
+  /* overflow-y: hidden; */
 }
 
 /* 整体滚动条 */
